Removed all .html locally

--- a/work.html
+++ b/work.html
@@ -31,16 +31,16 @@
         <nav>
             <ul>
                 <li class="active">
-                    <a class="text-link" href="/work.html">Work</a>
+                    <a class="text-link" href="/work">Work</a>
                 </li>
                 <li>
-                    <a class="text-link" href="/about.html">About</a>
+                    <a class="text-link" href="/about">About</a>
                 </li>
                 <li>
-                    <a class="text-link" href="/shop.html">Shop</a>
+                    <a class="text-link" href="/shop">Shop</a>
                 </li>
                 <li>
-                    <a class="text-link" href="./contact.html">Contact</a>
+                    <a class="text-link" href="./contact">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -55,7 +55,7 @@
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="nori-intro case-small__inner" style="--background: #F3F5F6; --text: #4050F7;">
-                    <a href="/work/nori.html" data-swup-transition="case-transition"></a>
+                    <a href="/work/nori" data-swup-transition="case-transition"></a>
                     <h2>Nori Kit</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Product</span>
@@ -67,7 +67,7 @@
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #EFEEE8; --text: #1E1E1E;">
-                    <a href="./work/glyfit.html" data-swup-transition="case-transition"></a>
+                    <a href="./work/glyfit" data-swup-transition="case-transition"></a>
                     <h2>Glyfit</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Product</span>
@@ -78,7 +78,7 @@
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #E8E8DF; --text: #161616;">
-                    <a href="./work/thredx.html" data-swup-transition="case-transition"></a>
+                    <a href="./work/thredx" data-swup-transition="case-transition"></a>
                     <h2>ThredX</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Branding</span>
@@ -88,7 +88,7 @@
             </article>
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #EBEAE7; --text: #DC5842;">
-                    <a href="./work/hom.html" data-swup-transition="case-transition"></a>
+                    <a href="./work/hom" data-swup-transition="case-transition"></a>
                     <h2>Houses of Malmö</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">E-commerce</span>
@@ -109,7 +109,7 @@
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #000000; --text: #DFE1EB;">
-                    <a href="./work/lightstage.html" data-swup-transition="case-transition"></a>
+                    <a href="./work/lightstage" data-swup-transition="case-transition"></a>
                     <h2>Light Stage</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Branding</span>
@@ -129,7 +129,7 @@
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #CECFD0; --text: #161616;">
-                    <a href="./work/mtn.html" data-swup-transition="case-transition"></a>
+                    <a href="./work/mtn" data-swup-transition="case-transition"></a>
                     <h2>Montana Cans</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Product</span>
@@ -140,7 +140,7 @@
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #EDF0F3; --text: #458EEC;">
-                    <a href="./work/glasin.html" data-swup-transition="case-transition"></a>
+                    <a href="./work/glasin" data-swup-transition="case-transition"></a>
                     <h2>Glas In</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Digital</span>
@@ -150,7 +150,7 @@
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #E6DFC8; --text: #405C41;">
-                    <a href="./work/420.html" data-swup-transition="case-transition"></a>
+                    <a href="./work/420" data-swup-transition="case-transition"></a>
                     <h2>Friend Jen 420</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Branding</span>
@@ -160,7 +160,7 @@
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #FFF7F0; --text: #1D7260;">
-                    <a href="./work/friendjen.html" data-swup-transition="case-transition"></a>
+                    <a href="./work/friendjen" data-swup-transition="case-transition"></a>
                     <h2>Friend Jen</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Digital</span>
@@ -175,7 +175,7 @@
             
             <div class="big-footer__center" data-aos="fade">
                 <h2>Looking for a partner for your next project or idea?</h2>
-                <a href="/contact.html"                 
+                <a href="/contact"                 
                 class="btn btn--outline"
                 style="--btn-color: #FEF8E2;
                 --btn-text: #0081A7;" title="work">Let's work together</a>
