--- a/work/mtn.html
+++ b/work/mtn.html
@@ -32,16 +32,16 @@
         <nav>
             <ul>
                 <li>
-                    <a class="text-link" href="/work.html">Work</a>
+                    <a class="text-link" href="/work">Work</a>
                 </li>
                 <li>
-                    <a class="text-link" href="/about.html">About</a>
+                    <a class="text-link" href="/about">About</a>
                 </li>
                 <li>
-                    <a class="text-link" href="/shop.html">Shop</a>
+                    <a class="text-link" href="/shop">Shop</a>
                 </li>
                 <li>
-                    <a class="text-link" href="/contact.html">Contact</a>
+                    <a class="text-link" href="/contact">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -190,7 +190,7 @@
             
             <div class="big-footer__center" data-aos="fade">
                 <h2>Looking for a partner for your next project or idea?</h2>
-                <a href="/contact.html"                 
+                <a href="/contact"                 
                 class="btn btn--outline"
                 style="--btn-color: #FBF778;
                 --btn-text: #242E25;" title="work">Let's work together</a>
