Tons of polish and stuff

--- a/contact/index.html
+++ b/contact/index.html
@@ -56,7 +56,7 @@
             <div class="col-12 push-4-11">
                 <h1 g-component="SeparateText" class="big-header-one">Let’s create 
                 your next idea</h1>
-                <p class="animate__animated animate__fadeIn animate__delay-1s">We'll work closely with you to pin down the problem, hone the brief, and shape the right team to create the solution your customers didn’t know they wanted.</p>
+                <p class="animate__animated animate__fadeIn animate__delay-1s">We'll work closely with you to pin down the problem, and create a solution your customers they didn’t know they wanted.</p>
             </div>
 
             <div class="col-3 animate__animated animate__fadeIn animate__delay-1s push-4-8">
@@ -71,11 +71,11 @@
 
             <div class="col-4 animate__animated animate__fadeIn animate__delay-1s push-4-8">
                 <p class="small-margin">Visit us</p>
-                <a class="heading-five p22" href="https://www.google.com/maps/place/Adelgatan+19A,+211+22+Malm%C3%B6/@55.6071186,12.9995299,3a,75y,333.85h,92.55t/data=!3m6!1e1!3m4!1s8UrgduxmWdv4VqvRZjxnHQ!2e0!7i13312!8i6656!4m5!3m4!1s0x4653a3fc1fba1941:0x8350d79b5254a276!8m2!3d55.6072002!4d12.9996335" target="_blank">Adelgatan 1921122 <br>Malmö Sweden</a>
+                <a class="heading-five p22" href="https://www.google.com/maps/place/Adelgatan+19A,+211+22+Malm%C3%B6/@55.6071186,12.9995299,3a,75y,333.85h,92.55t/data=!3m6!1e1!3m4!1s8UrgduxmWdv4VqvRZjxnHQ!2e0!7i13312!8i6656!4m5!3m4!1s0x4653a3fc1fba1941:0x8350d79b5254a276!8m2!3d55.6072002!4d12.9996335" target="_blank">Adelgatan 19, 21122 <br>Malmö Sweden</a>
             </div>
         </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.6.5/lottie.min.js"></script>
-    <script src="./assets/app.js"></script>
+    <script src="../assets/app.js"></script>
 </body>
 </html>
