--- a/index.html
+++ b/index.html
@@ -101,13 +101,11 @@
         --text-color: #4050F7;
         --background-color: #E3E6EA;
         ">
-            <img class="case-intro__pic lazyload" src="./assets/images/case-intro/nori.webp" 
-            data-sizes="auto" 
-            data-src="./assets/images/case-intro/nori.webp"
-            data-srcset="./assets/images/case-intro/nori.webp 500w,
-            ./assets/images/case-intro/nori.webp 640w,
-            ./assets/images/case-intro/nori.webp 1024w"
-            alt="Norikit intro picture">
+            <video class="case-intro__pic" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                <source src="../assets/images/web-nori3.webm" type="video/webm" />
+                <source src="../assets/images/web-nori3.mp4" type="video/mp4" />
+            </video>
+
             <div class="case-intro__text">
 
                 <div class="case-intro__text__inner">
@@ -130,7 +128,8 @@
         --text-color: #141414;
         --background-color: #E8E8DF;
         ">
-            <video class="case-intro__pic" muted playsinline autoplay="autoplay" style="pointer-events: none;">
+            <video class="case-intro__pic" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                <source src="../assets/images/thredx-video-header.webm" type="video/webm" />
                 <source src="../assets/images/thredx-video-header.mp4" type="video/mp4" />
             </video>
 
