--- a/shop/index.html
+++ b/shop/index.html
@@ -107,7 +107,7 @@
         
         <div class="big-footer__center" data-aos="fade">
             <h2>Looking to create something you can sell?</h2>
-            <a href="/contact.html"                 
+            <a href="/../contact"                 
             class="btn btn--outline"
             style="--btn-color: #FEF8E2;
             --btn-text: #0081A7;" title="work">Let's work together</a>
