--- a/work/thredx.html
+++ b/work/thredx.html
@@ -298,7 +298,7 @@
             
             <div class="big-footer__center" data-aos="fade">
                 <h2>Looking for a partner for your next project or idea?</h2>
-                <a href="/contact.html"                 
+                <a href="/../contact"                 
                 class="btn btn--outline"
                 style="--btn-color: #FBF778;
                 --btn-text: #242E25;" title="work">Let's work together</a>
@@ -332,6 +332,6 @@
         </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.6.5/lottie.min.js"></script>
-    <script src="/assets/app.js"></script>
+    <script src="../assets/app.js"></script>
 </body>
 </html>
