--- a/about/index.html
+++ b/about/index.html
@@ -75,7 +75,7 @@
 
             <div class="col col-6" data-aos="fade">
                 <p>
-                    On the other side of this screen, there's a perfectly sized team of well-tempered creative professionals ready to find the bestest animated solution for your business. Animation is our business and we use it to drive yours. We speak fluent corporate and we’re just one e-mail away!
+                    As project partners we help our clients to discover and take ownership of their brand's unique role in the world. We don't work with particular industries, instead we try to work with brands we respect, forging partnerships and treading new ground with each piece of work.
                 </p>
 
                 <p class="col-text" data-aos="fade">
@@ -119,7 +119,7 @@
             
             <div class="big-footer__center" data-aos="fade">
                 <h2>Looking for a partner for your next project or idea?</h2>
-                <a href="/contact.html"                 
+                <a href="/../contact"                 
                 class="btn btn--outline"
                 style="--btn-color: #FBF778;
                 --btn-text: #1D7260;" title="work">Let's work together</a>
