--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         --text-color: #4050F7;
         --background-color: #E3E6EA;
         ">
-            <video class="case-intro__pic" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+            <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/web-nori3.webm" type="video/webm" />
                 <source src="../assets/images/web-nori3.mp4" type="video/mp4" />
             </video>
@@ -128,7 +128,7 @@
         --text-color: #141414;
         --background-color: #E8E8DF;
         ">
-            <video class="case-intro__pic" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+            <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/thredx-video-header.webm" type="video/webm" />
                 <source src="../assets/images/thredx-video-header.mp4" type="video/mp4" />
             </video>
@@ -185,7 +185,7 @@
             ./assets/images/shadow-dissolve.webp 1024w"
             alt="shadow">
             
-            <div class="wrapper-inner" style="color: #F5B1BC">
+            <div class="wrapper-inner">
                 <h2 class="uppercase"  data-aos="fade">We value our craft<span class="img-text"><img src="../assets/images/img-2.webp" alt="image-1"></span>,have a deep passion for progression, and exist<span class="img-text"><img src="../assets/images/img-1.webp" alt="image-1"></span> to solve challenges for <span class="img-text"><img src="../assets/images/img-3.webp" alt="image-1"></span>brands we believe in. <br><br>Since the beginning, our mission has been to do great work and to have a great time doing it.</h2>
                 <div id="front-hand"  data-aos="fade"></div>
             </div>
@@ -223,7 +223,7 @@
                 </ul>
             </div>
 
-            <div class="col-3" col-3-last>
+            <div class="col-3 col-3-last">
                 <a class="paragraph" href="https://www.google.com/maps/place/Adelgatan+19A,+211+22+Malm%C3%B6/@55.6071186,12.9995299,3a,75y,333.85h,92.55t/data=!3m6!1e1!3m4!1s8UrgduxmWdv4VqvRZjxnHQ!2e0!7i13312!8i6656!4m5!3m4!1s0x4653a3fc1fba1941:0x8350d79b5254a276!8m2!3d55.6072002!4d12.9996335" target="_blank">Adelgatan 19a <br>21122 Malmö</a>
                 <p>© 2022 by Fjaka</p>
             </div>
