--- a/work/thredx.html
+++ b/work/thredx.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ThredX | Fjaka</title>
-    <link href="../favicon.webp" rel="shortcut icon" type="image/x-icon">
+    <link href="/favicon.webp" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/prw8hpu.css">
     <link rel="stylesheet" href="../assets/normalize.css">
     <link rel="stylesheet" href="../assets/main.css">
