Fixed more responsive bugs

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <span g-component="SeparateText" class="swoosh-title title-4">incredible apps</span>
                 <span g-component="SeparateText" class="swoosh-title title-5">unforgetable brands</span>
             </h2>
-            <div class="btn-wrapper">
+            <div class="btn-wrapper animate__animated animate__fadeIn">
                 <a href="/work"                 
                 class="btn btn--outline"
                 style="--btn-color: #FBF778;
