--- a/work/thredx.html
+++ b/work/thredx.html
@@ -197,63 +197,53 @@
                     alt="thredx website">
                 </figure>
             </div>
-            <div class="col col-12 full-width-pic">
-                <div class="glide">
-                    <div class="glide__track" data-glide-el="track">
-                        <ul class="glide__slides">
-                        <li class="glide__slide">
-                            <figure class="case-pic">
-                                <img class="lazyload" src="/assets/images/thredx/case-pic-11.webp" 
-                                data-size="auto" 
-                                data-src="/assets/images/thredx/case-pic-11.webp"
-                                data-srcset="/assets/images/thredx/case-pic-11.webp 500w
-                                /assets/images/thredx/case-pic-11.webp 640w,
-                                /assets/images/thredx/case-pic-11.webp 1024w"
-                                alt="thredx website">
-                            </figure>
-                        </li>
-                        <li class="glide__slide">
-                            <figure class="case-pic">
-                                <img class="lazyload" src="/assets/images/thredx/case-pic-12.webp" 
-                                data-size="auto" 
-                                data-src="/assets/images/thredx/case-pic-12.webp"
-                                data-srcset="/assets/images/thredx/case-pic-12.webp 500w
-                                /assets/images/thredx/case-pic-12.webp 640w,
-                                /assets/images/thredx/case-pic-12.webp 1024w"
-                                alt="thredx website">
-                            </figure>
-                        </li>
-                        <li class="glide__slide">
-                            <figure class="case-pic">
-                                <img class="lazyload" src="/assets/images/thredx/case-pic-13.webp" 
-                                data-size="auto" 
-                                data-src="/assets/images/thredx/case-pic-13.webp"
-                                data-srcset="/assets/images/thredx/case-pic-13.webp 500w
-                                /assets/images/thredx/case-pic-13.webp 640w,
-                                /assets/images/thredx/case-pic-13.webp 1024w"
-                                alt="thredx website">
-                            </figure>
-                        </li>
-                        <li class="glide__slide">
-                            <figure class="case-pic">
-                                <img class="lazyload" src="/assets/images/thredx/case-pic-14.webp" 
-                                data-size="auto" 
-                                data-src="/assets/images/thredx/case-pic-14.webp"
-                                data-srcset="/assets/images/thredx/case-pic-14.webp 500w
-                                /assets/images/thredx/case-pic-14.webp 640w,
-                                /assets/images/thredx/case-pic-14.webp 1024w"
-                                alt="thredx website">
-                            </figure>
-                        </li>
-                        </ul>
-                    </div>
 
-                    <div class="glide__bullets" data-glide-el="controls[nav]">
-                        <button class="glide__bullet" data-glide-dir="=0"></button>
-                        <button class="glide__bullet" data-glide-dir="=1"></button>
-                        <button class="glide__bullet" data-glide-dir="=2"></button>
-                    </div>
-                </div>
+            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/thredx/case-pic-11.webp" 
+                    data-size="auto" 
+                    data-src="/assets/images/thredx/case-pic-11.webp"
+                    data-srcset="/assets/images/thredx/case-pic-11.webp 500w
+                    /assets/images/thredx/case-pic-11.webp 640w,
+                    /assets/images/thredx/case-pic-11.webp 1024w"
+                    alt="thredx website">
+                </figure>
+            </div>
+
+            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/thredx/case-pic-12.webp" 
+                    data-size="auto" 
+                    data-src="/assets/images/thredx/case-pic-12.webp"
+                    data-srcset="/assets/images/thredx/case-pic-12.webp 500w
+                    /assets/images/thredx/case-pic-12.webp 640w,
+                    /assets/images/thredx/case-pic-12.webp 1024w"
+                    alt="thredx website">
+                </figure>
+            </div>
+
+            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/thredx/case-pic-13.webp" 
+                    data-size="auto" 
+                    data-src="/assets/images/thredx/case-pic-13.webp"
+                    data-srcset="/assets/images/thredx/case-pic-13.webp 500w
+                    /assets/images/thredx/case-pic-13.webp 640w,
+                    /assets/images/thredx/case-pic-13.webp 1024w"
+                    alt="thredx website">
+                </figure>
+            </div>
+
+            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/thredx/case-pic-14.webp" 
+                    data-size="auto" 
+                    data-src="/assets/images/thredx/case-pic-14.webp"
+                    data-srcset="/assets/images/thredx/case-pic-14.webp 500w
+                    /assets/images/thredx/case-pic-14.webp 640w,
+                    /assets/images/thredx/case-pic-14.webp 1024w"
+                    alt="thredx website">
+                </figure>
             </div>
 
             <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
