Added mobile menu

--- a/work/glasin.html
+++ b/work/glasin.html
@@ -30,6 +30,12 @@
                     </svg> 
                 </a>   
             </figure>
+
+            <button class="menu-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <nav>
                 <ul>
                     <li>
