--- a/work/thredx.html
+++ b/work/thredx.html
@@ -30,6 +30,12 @@
                     </svg> 
                 </a>   
             </figure>
+
+            <button class="menu-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <nav>
                 <ul>
                     <li>
@@ -174,7 +180,7 @@
         </div>
 
         <div class="wrapper-inner wrapper-inner--dark wrapper-inner----footer-margin">
-            <div class="col col-8 push-3-11 col--stick-margin col--stick-margin" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
                     <img class="lazyload" src="/assets/images/thredx/case-pic-9.webp" 
                     data-size="auto" 
