--- a/about/index.html
+++ b/about/index.html
@@ -30,6 +30,11 @@
                     </svg> 
                 </a>   
             </figure>
+            <button class="menu-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <nav>
                 <ul>
                     <li>
