--- a/work/friendjen.html
+++ b/work/friendjen.html
@@ -31,6 +31,13 @@
                     </svg> 
                 </a>   
             </figure>
+
+            <button class="menu-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            
             <nav>
                 <ul>
                     <li>
