--- a/work/index.html
+++ b/work/index.html
@@ -29,6 +29,12 @@
                     </svg> 
                 </a>   
             </figure>
+
+            <button class="menu-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <nav>
                 <ul>
                     <li class="active">
