Minor fixes for menu icon and added videos to thredx and nori case

--- a/work/thredx.html
+++ b/work/thredx.html
@@ -54,13 +54,10 @@
             </nav>
         </header>
         <figure class="case-header">
-            <img class="case-pic-big lazyload" data-aos="fade" data-aos-offset="0" data-aos-delay="300" src="/assets/images/thredx/thredx-header.webp" 
-            data-sizes="auto" 
-            data-src="/assets/images/thredx/thredx-header.webp"
-            data-srcset="/assets/images/thredx/thredx-header.webp 500w,
-            /assets/images/thredx/thredx-header.webp 640w,
-            /assets/images/thredx/thredx-header.webp 1024w"
-            alt="thredxkit intro picture">
+            <video preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                <source src="../assets/images/thredx-video-header.webm" type="video/webm" />
+                <source src="../assets/images/thredx-video-header.mp4" type="video/mp4" />
+            </video>
         </figure>
 
         <div class="wrapper-inner">
