--- a/work/nori.html
+++ b/work/nori.html
@@ -55,13 +55,10 @@
             </nav>
         </header>
         <figure class="case-header">
-            <img class="case-pic-big lazyload" data-aos="fade" data-aos-offset="0" data-aos-delay="300" src="/assets/images/nori/nori-header.webp" 
-            data-sizes="auto" 
-            data-src="/assets/images/nori/nori-header.webp"
-            data-srcset="/assets/images/nori/nori-header.webp 500w,
-            /assets/images/nori/nori-header.webp 640w,
-            /assets/images/nori/nori-header.webp 1024w"
-            alt="Norikit intro picture">
+            <video preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                <source src="../assets/images/web-nori3.webm" type="video/webm" />
+                <source src="../assets/images/web-nori3.mp4" type="video/mp4" />
+            </video>
         </figure>
 
         <div class="wrapper-inner">
