--- a/work/glasin.html
+++ b/work/glasin.html
@@ -54,7 +54,7 @@
             </nav>
         </header>
         <figure class="case-header">
-            <img class="case-pic-big lazyload" data-aos="fade" data-aos-offset="0" data-aos-delay="300" src="/assets/images/glasin/glasin-header.webp" 
+            <img class="case-pic-big lazyload" data-aos="fade" data-aos-offset="0" src="/assets/images/glasin/glasin-header.webp" 
             data-sizes="auto" 
             data-src="/assets/images/glasin/glasin-header.webp"
             data-srcset="/assets/images/glasin/glasin-header.webp 500w,
@@ -64,11 +64,11 @@
         </figure>
 
         <div class="wrapper-inner">
-            <div class="col col-6" data-aos-delay="500" data-aos-offset="0" data-aos="fade-up">
+            <div class="col col-6" data-aos-offset="0" data-aos="fade-up">
                 <h1>Who is Glas In?</h1>
             </div>
 
-            <div class="col col-6" data-aos-delay="500" data-aos-offset="0" data-aos="fade-up">
+            <div class="col col-6" data-aos-offset="0" data-aos="fade-up">
                 <p>
                     Glas In has been manufacturing glass sections in Malmö since 1986. It started with the production of balcony glazing, but as customers' wishes have changed, new products have been added. In 1991, the old premises in the port of Malmö were left for a newly built larger facility in Oxie (just outside Malmö). This facility has been expanded considerably over the years and it is still where Glas Ins' production and head office are located.
                 </p>
@@ -176,11 +176,11 @@
                 </figure>
             </div>
 
-            <div class="col col-6" data-aos-delay="500">
+            <div class="col col-6">
                 <h1>A project in collaboration</h1>
             </div>
 
-            <div class="col col-6" data-aos-delay="500">
+            <div class="col col-6">
                 <p>
                     Development by:
                     Sunfish AB
