--- a/work/lightstage.html
+++ b/work/lightstage.html
@@ -64,11 +64,11 @@
         </figure>
 
         <div class="wrapper-inner wrapper-inner--footer-margin">
-            <div class="col col-6" data-aos-delay="500" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <h1>Light Stage rebranding</h1>
             </div>
 
-            <div class="col col-6" data-aos-delay="500" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <p>
                     A powerfully focused branding strategy delivered through superior design provides the competitive advantage that is essential in assuring Light Stage reaches its full potential.
                 </p>
