--- a/work/nori.html
+++ b/work/nori.html
@@ -62,11 +62,11 @@
         </figure>
 
         <div class="wrapper-inner">
-            <div class="col col-6" data-aos-delay="500" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <h1>Stunning prototypes with Norikit</h1>
             </div>
 
-            <div class="col col-6" data-aos-delay="500" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <p>
                     Nori Kit combines the best parts of productivity and design with a complete wireframe kit produced in Figma to help teams create beautifully designed prototypes in minutes.
                 </p>
