--- a/work/thredx.html
+++ b/work/thredx.html
@@ -61,11 +61,11 @@
         </figure>
 
         <div class="wrapper-inner">
-            <div class="col col-6" data-aos-offset="0" data-aos-delay="500" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos-offset="0" data-aos="fade-up" data-aos-offset="0">
                 <h1>The story behind ThredX</h1>
             </div>
 
-            <div class="col col-6" data-aos-offset="0" data-aos-delay="500" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos-offset="0" data-aos="fade-up" data-aos-offset="0">
                 <p>
                     The story starts with two young women with an all encompassing interest for fashion and clothing. It’s not a unique background - as many women in their 20s have an affinity to the glitz and glam of the fashion industry. But although they had a love for fashion, they loathed it at the same time.
                 </p>
