Added og tags and minor js fix

--- a/work/mtn.html
+++ b/work/mtn.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Montana Cans | Fjaka</title>
+    <meta name="description" content="Fjaka is an award-winning creative studio. We specialise in creating brand identities, websites, apps, illustration and animations for clients of all kinds.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://fjaka.co">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Fjaka">
+    <meta property="og:description" content="Fjaka is an award-winning creative studio. We specialise in creating brand identities, websites, apps, illustration and animations for clients of all kinds.">
+    <meta property="og:image" content="http://fjaka.co/assets/images/og/og-mtn.png">
+  
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="fjaka.co">
+    <meta property="twitter:url" content="https://fjaka.co">
+    <meta name="twitter:title" content="Fjaka">
+    <meta name="twitter:description" content="Fjaka is an award-winning creative studio. We specialise in creating brand identities, websites, apps, illustration and animations for clients of all kinds.">
+    <meta name="twitter:image" content="http://fjaka.co/assets/images/og/og-mtn.png">
+    
     <link href="/favicon.webp" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/prw8hpu.css">
     <link rel="stylesheet" href="../assets/normalize.css">
