--- a/work/index.html
+++ b/work/index.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Work | Fjaka</title>
+    <meta name="description" content="All work No play">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://fjaka.co">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Fjaka">
+    <meta property="og:description" content="All work No play">
+    <meta property="og:image" content="http://fjaka.co/assets/images/og/og-work.png">
+  
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="fjaka.co">
+    <meta property="twitter:url" content="https://fjaka.co">
+    <meta name="twitter:title" content="Fjaka">
+    <meta name="twitter:description" content="All work No play">
+    <meta name="twitter:image" content="http://fjaka.co/assets/images/og/og-work.png">
+
     <link href="/favicon.webp" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/prw8hpu.css">
     <link rel="stylesheet" href="../assets/normalize.css">
