Added new case pics for ThredX

--- a/work/thredx.html
+++ b/work/thredx.html
@@ -194,6 +194,55 @@
         </div>
 
         <div class="wrapper-inner wrapper-inner--dark wrapper-inner----footer-margin">
+            <div class="col col-6" data-aos-offset="0" data-aos="fade-up" data-aos-offset="0">
+                <h2 class="heading-one">The ins n'out of the digital part</h2>
+            </div>
+
+            <div class="col col-6" data-aos-offset="0" data-aos="fade-up" data-aos-offset="0">
+                <p>
+                    For the website we wanted to create something unique in the terms of the navigation, while also honouring the Brand ID as much as possible. 
+                </p>
+                <p>
+                    We focused heavily on creating a clean user experience with animations as the primary eye catcher. With the animations we also wanted to focus on clean and big typography. This together with clean visuals made the website shine from other competitors.
+                </p>
+            </div>
+
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/thredx/case-pic-18.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/thredx/case-pic-18.webp"
+                    data-srcset="/assets/images/thredx/case-pic-18.webp 500w,
+                    /assets/images/thredx/case-pic-18.webp 640w,
+                    /assets/images/thredx/case-pic-18.webp 1024w"
+                    alt="thredx website">
+                </figure>
+            </div>
+
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/thredx/case-pic-19.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/thredx/case-pic-19.webp"
+                    data-srcset="/assets/images/thredx/case-pic-19.webp 500w,
+                    /assets/images/thredx/case-pic-19.webp 640w,
+                    /assets/images/thredx/case-pic-19.webp 1024w"
+                    alt="thredx website">
+                </figure>
+            </div>
+
+            <div class="col col-12" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/thredx/case-pic-20.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/thredx/case-pic-20.webp"
+                    data-srcset="/assets/images/thredx/case-pic-20.webp 500w,
+                    /assets/images/thredx/case-pic-20.webp 640w,
+                    /assets/images/thredx/case-pic-20.webp 1024w"
+                    alt="thredx website">
+                </figure>
+            </div>
+
             <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
                     <img class="lazyload" src="/assets/images/thredx/case-pic-9.webp" 
