--- a/work/glyfit.html
+++ b/work/glyfit.html
@@ -103,7 +103,7 @@
                 </figure>
             </div>
 
-            <div class="col col-12 col--no-margin" data-aos-offset="0" data-aos="fade-up">
+            <div class="col col-12" data-aos-offset="0" data-aos="fade-up">
                 <figure class="case-pic">
                     <img class="lazyload" src="/assets/images/glyfit/case-pic-1.webp" 
                     data-sizes="auto" 
