Major fix of margins

--- a/about/index.html
+++ b/about/index.html
@@ -120,7 +120,7 @@
         <div class="wrapper-inner wrapper-inner--pink">
 
             <div class="col col-12">
-                <h2 data-aos="fade">Awards n’ stuff</h2>
+                <h2 data-aos="fade" data-aos-offset="0">Awards n’ stuff</h2>
                 <div class="row" data-aos="fade" data-aos-offset="0">
                     <p class="col col-7">We know that awards work well! Both - for us and you. Here’s a few recognitions that we’ve recivied, which we are very greatful for.</p>
                     
