--- a/work/420.html
+++ b/work/420.html
@@ -72,7 +72,7 @@
         </header>
 
         <div class="wrapper-inner wrapper-inner--footer-margin wrapper-inner--no-header">
-            <div class="col col-6 col--no-margin" data-aos-offset="0" data-aos="fade-up">
+            <div class="col col-6 col--text" data-aos-offset="0" data-aos="fade-up">
                 <h1>A visual and fun campaign for
                     Friend Jen & Co</h1>
             </div>
