--- a/work/glasin.html
+++ b/work/glasin.html
@@ -82,7 +82,7 @@
         </figure>
 
         <div class="wrapper-inner">
-            <div class="col col-6" data-aos-offset="0" data-aos="fade-up">
+            <div class="col col-6 col--text" data-aos-offset="0" data-aos="fade-up">
                 <h1>Who is Glas In?</h1>
             </div>
 
@@ -194,7 +194,7 @@
                 </figure>
             </div>
 
-            <div class="col col-6">
+            <div class="col col-6 col--text">
                 <h1>A project in collaboration</h1>
             </div>
 
