--- a/work/glyfit.html
+++ b/work/glyfit.html
@@ -81,7 +81,7 @@
         </figure>
 
         <div class="wrapper-inner wrapper-inner--footer-margin">
-            <div class="col col-6" data-aos-delay="500" data-aos-offset="0" data-aos="fade-up">
+            <div class="col col-6 col--text" data-aos-delay="500" data-aos-offset="0" data-aos="fade-up">
                 <h1>Special characters & symbols in a swoosh</h1>
             </div>
 
