--- a/work/hom.html
+++ b/work/hom.html
@@ -81,12 +81,12 @@
         </figure>
 
         <div class="wrapper-inner">
-            <div class="col col-6 col--small-margin" data-aos-delay="500" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6 col--text" data-aos-delay="500" data-aos="fade-up" data-aos-offset="0">
                 <h1>A love letter to the
                     architecture that we walk by every day.</h1>
             </div>
 
-            <div class="col col-6 col--small-margin" data-aos-delay="500" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos-delay="500" data-aos="fade-up" data-aos-offset="0">
                 <p>
                     House of Malmö (HoM) was started in 2021 to show the beauty of Malmö stads architecture — HoMs purpose is to show the beauty of Malmö, which so many of us walk by every single day.
                     <br><br>
@@ -120,7 +120,7 @@
         </div>
 
         <div class="wrapper-inner wrapper-inner--dark wrapper-inner--no-margin-bottom">
-            <div class="col col-6" data-aos="fade" data-aos-offset="0" data-aos-delay="300">
+            <div class="col col-6 col--text" data-aos="fade" data-aos-offset="0" data-aos-delay="300">
                 <h2 class="heading-one">Building the story 
                     and art direction</h2>
             </div>
@@ -153,7 +153,7 @@
                 <h2 class="heading-one">Bringing the visual identity to life</h2>
             </div>
 
-            <div class="col col-6 col--small-margin" data-aos="fade" data-aos-offset="0" data-aos-delay="300">
+            <div class="col col-6" data-aos="fade" data-aos-offset="0" data-aos-delay="300">
                 <p>
                     We wanted to make the brand work for everyone. The brand should not take over because the actual houses on posters are the most important thing. 
                     The brand should elevate the posters.
@@ -206,7 +206,7 @@
         </div>
 
         <div class="wrapper-inner wrapper-inner--dark">
-            <div class="col col-6" data-aos="fade" data-aos-offset="0" data-aos-delay="300">
+            <div class="col col-6 col--text" data-aos="fade" data-aos-offset="0" data-aos-delay="300">
                 <h2 class="heading-one">Award winning e-commerce platform built on Shopify</h2>
             </div>
 
