--- a/work/nori.html
+++ b/work/nori.html
@@ -79,7 +79,7 @@
         </figure>
 
         <div class="wrapper-inner">
-            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6 col--text" data-aos="fade-up" data-aos-offset="0">
                 <h1>Stunning prototypes with Norikit</h1>
             </div>
 
@@ -104,11 +104,11 @@
             </div>
 
 
-            <div class="col col-6" data-aos="fade" data-aos-offset="0" data-aos-delay="300">
+            <div class="col col-6 col--text" data-aos="fade" data-aos-offset="0" data-aos-delay="0">
                 <h1>Why another wireframe kit?</h1>
             </div>
 
-            <div class="col col-6" data-aos="fade" data-aos-offset="0" data-aos-delay="300">
+            <div class="col col-6" data-aos="fade" data-aos-offset="0" data-aos-delay="0">
                 <p>
                     Here at Fjaka we do wireframes (as you should) and after far to many kits bought, we thought; why not create our own that we can maintain? <br><br>After ups n' downs, we’re very proud to announce our wireframe kit. It’s huge with so many layouts, components and tons of other cool stuff.
                 </p>
@@ -140,7 +140,7 @@
         </div>
 
         <div class="wrapper-inner wrapper-inner--dark">
-            <div class="col col-6" data-aos="fade" data-aos-offset="0">
+            <div class="col col-6 col--text" data-aos="fade" data-aos-offset="0">
                 <h2>A look inside the kit</h2>
             </div>
 
@@ -155,7 +155,7 @@
                 </ul>
             </div>
 
-            <div class="col col--no-margin col-6" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
                     <img class="lazyload" src="/assets/images/nori/kit-3.webp" 
                     data-sizes="auto" 
@@ -167,7 +167,7 @@
                 </figure>
             </div>
 
-            <div class="col col--no-margin col-6" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
                     <img class="lazyload" src="/assets/images/nori/kit-2.webp" 
                     data-sizes="auto" 
