--- a/work/thredx.html
+++ b/work/thredx.html
@@ -78,7 +78,7 @@
         </figure>
 
         <div class="wrapper-inner">
-            <div class="col col-6" data-aos-offset="0" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6 col--text" data-aos-offset="0" data-aos="fade-up" data-aos-offset="0">
                 <h1>The story behind ThredX</h1>
             </div>
 
@@ -180,7 +180,7 @@
                 </figure>
             </div>
 
-            <div class="col col-12" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-12 col--no-margin" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
                     <img class="lazyload" src="/assets/images/thredx/case-pic-8.webp" 
                     data-size="auto" 
@@ -194,7 +194,7 @@
         </div>
 
         <div class="wrapper-inner wrapper-inner--dark wrapper-inner----footer-margin">
-            <div class="col col-6" data-aos-offset="0" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6 col--text" data-aos-offset="0" data-aos="fade-up" data-aos-offset="0">
                 <h2 class="heading-one">The ins n'out of the digital part</h2>
             </div>
 
