--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         --text-color: #4050F7;
         --background-color: #E3E6EA;
         ">
+        <a class="fullsize-link" href="/work/nori"></a>
             <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/web-nori3.webm" type="video/webm" />
                 <source src="../assets/images/web-nori3.mp4" type="video/mp4" />
@@ -163,6 +164,8 @@
         --text-color: #141414;
         --background-color: #E8E8DF;
         ">
+
+            <a class="fullsize-link" href="/work/thredx"></a>
             <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/thredx-video-header.webm" type="video/webm" />
                 <source src="../assets/images/thredx-video-header.mp4" type="video/mp4" />
@@ -188,6 +191,7 @@
         --text-color: #E6DAD8;
         --background-color: #DC5842;
         ">
+        <a class="fullsize-link" href="/work/hom"></a>
             <img class="case-intro__pic lazyload" src="./assets/images/case-intro/hom.webp" 
             data-sizes="auto" 
             data-src="./assets/images/case-intro/hom.webp"
