--- a/work/friendjen.html
+++ b/work/friendjen.html
@@ -83,7 +83,7 @@
         </figure>
 
         <div class="wrapper-inner wrapper-inner--footer-margin">
-            <div class="col col-6" data-aos="fade-up">
+            <div class="col col-6 col--text" data-aos="fade-up">
                 <h1>Friend Jen & Co
                     Rebranding</h1>
             </div>
@@ -148,7 +148,7 @@
                 </figure>
             </div>
 
-            <div class="col col-12 full-width-pic col--no-margin" data-aos="fade-up">
+            <div class="col col-12 full-width-pic" data-aos="fade-up">
                 <figure class="case-pic">
                     <img class="lazyload" src="/assets/images/friendjen/case-pic-5.webp" 
                     data-sizes="auto" 
