--- a/work/lightstage.html
+++ b/work/lightstage.html
@@ -81,7 +81,7 @@
         </figure>
 
         <div class="wrapper-inner wrapper-inner--footer-margin">
-            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6 col--text" data-aos="fade-up" data-aos-offset="0">
                 <h1>Light Stage rebranding</h1>
             </div>
 
