--- a/work/mtn.html
+++ b/work/mtn.html
@@ -80,7 +80,7 @@
         </figure>
 
         <div class="wrapper-inner wrapper-inner--footer-margin">
-            <div class="col col-6" data-aos-delay="500" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6 col--text" data-aos-delay="500" data-aos="fade-up" data-aos-offset="0">
                 <h1>Analog artist tools 
                     made digital</h1>
             </div>
@@ -154,7 +154,7 @@
                 </figure>
             </div>
 
-            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-8 push-3-11 col--no-margin" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
                     <img class="lazyload" src="/assets/images/mtn/case-pic-9.webp" 
                     data-sizes="auto" 
@@ -168,7 +168,7 @@
         </div>
 
         <div class="wrapper-inner wrapper-inner--dark">
-            <div class="col col-6" data-aos-delay="500" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6 col--text" data-aos-delay="500" data-aos="fade-up" data-aos-offset="0">
                 <h1>An animated explainer video</h1>
             </div>
 
