--- a/work/mtn.html
+++ b/work/mtn.html
@@ -70,13 +70,10 @@
             </nav>
         </header>
         <figure class="case-header">
-            <img class="case-pic-big lazyload" data-aos="fade" data-aos-offset="0" data-aos-delay="300" src="/assets/images/mtn/mtn-header.webp" 
-            data-sizes="auto" 
-            data-src="/assets/images/mtn/mtn-header.webp"
-            data-srcset="/assets/images/mtn/mtn-header.webp 500w,
-            /assets/images/mtn/mtn-header.webp 640w,
-            /assets/images/mtn/mtn-header.webp 1024w"
-            alt="Montana intro picture">
+            <video preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                <source src="../assets/images/case-intro-full/mtn-case-intro-full.webm" type="video/webm" />
+                <source src="../assets/images/case-intro-full/mtn-case-intro-full.mp4" type="video/mp4" />
+            </video>
         </figure>
 
         <div class="wrapper-inner wrapper-inner--footer-margin">
